test_output.log
    Blocking waiting for file lock on artifact directory
   Compiling klomang-core v0.1.0 (/workspaces/klomang-core)
error[E0761]: file for module `mempool` found at both "src/core/engine/mempool.rs" and "src/core/engine/mempool/mod.rs"
 --> src/core/engine/mod.rs:8:1
  |
8 | pub(crate) mod mempool;
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: delete or rename one of them to remove the ambiguity

warning: unused import: `crate::core::state::transaction::Transaction`
  --> src/core/consensus/reward.rs:13:5
   |
13 | use crate::core::state::transaction::Transaction;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::core::crypto::schnorr`
 --> src/core/state/utxo.rs:4:5
  |
4 | use crate::core::crypto::schnorr;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::core::consensus::ghostdag::VirtualBlock`
 --> src/core/engine/ordering.rs:4:5
  |
4 | use crate::core::consensus::ghostdag::VirtualBlock;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `block`
  --> src/core/consensus/reward.rs:26:23
   |
26 | pub fn calculate_fees(block: &BlockNode, _accepted_txs: &HashSet<Hash>) ...
   |                       ^^^^^ help: if this is intentional, prefix it with an underscore: `_block`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0761`.
warning: `klomang-core` (lib test) generated 4 warnings
error: could not compile `klomang-core` (lib test) due to 1 previous error; 4 warnings emitted
